check_LTLIBRARIES = libtest_ce.la
libtest_ce_la_SOURCES = libtest_ce.cpp
libtest_ce_la_LDFLAGS = -rpath $(abs_srcdir)/testsuite/.libs

TESTS_ENVIRONMENT = $(top_srcdir)/testsuite/try $(top_srcdir)
TESTS = \
  test_angles.pro \
  test_base64.pro \
  test_binfmt.pro \
  test_bug_1779553.pro \
  test_bug_2555865.pro \
  test_bug_2610174.pro \
  test_bug_2846561.pro \
  test_bug_2876150.pro \
  test_bug_2876161.pro \
  test_bug_2974380.pro \
  test_bug_3033108.pro \
  test_bug_3054361.pro \
  test_bug_3055720.pro \
  test_bug_3057511.pro \
  test_bug_3057520.pro \
  test_bug_3061072.pro \
  test_bug_3081887.pro \
  test_bug_3085858.pro \
  test_bug_3086851.pro \
  test_bug_3091599.pro \
  test_bug_3091610.pro \
  test_bug_3100945.pro \
  test_bug_3104209.pro \
  test_bug_3104214.pro \
  test_bug_3104326.pro \
  test_bug_3104349.pro \
  test_bug_3147181.pro \
  test_bug_3147733.pro \
  test_bug_3151760.pro \
  test_bug_3152899.pro \
  test_bug_3189072.pro \
  test_bug_3199465.pro \
  test_bug_3244840.pro \
  test_bug_3275334.pro \
  test_bug_3286031.pro \
  test_bug_3288652.pro \
  test_bug_3290532.pro \
  test_bug_3296360.pro \
  test_bug_3298378.pro \
  test_bug_3300626.pro \
  test_bug_3313522.pro \
  test_bug_3376577.pro \
  test_bug_3441031.pro \
  test_ce.pro \
  test_clip.pro \
  test_common.pro \
  test_constants.pro \
  test_correlate.pro \
  test_deriv.pro \
  test_device.pro \
  test_dicom.pro \
  test_erfinv.pro \
  test_execute.pro \
  test_fft.pro \
  test_fft_leak.pro \
  test_file_basename.pro \
  test_file_copy.pro \
  test_file_delete.pro \
  test_file_dirname.pro \
  test_file_search.pro \
  test_file_which.pro \
  test_fix.pro \
  test_fixprint.pro \
  test_gc.pro \
  test_get_screen_size.pro \
  test_grib.pro \
  test_hist_2d.pro \
  test_idl8.pro \
  test_idl_validname.pro \
  test_image_statistics.pro \
  test_interpol.pro \
  test_interpolate_missing.pro \
  test_memory.pro \
  test_moment.pro \
  test_mpfit.pro \
  test_multiroots.pro \
  test_nestedloop.pro \
  test_plotting_ranges.pro \
  test_pmulti.pro \
  test_product.pro \
  test_ps_decomposed.pro \
  test_python.pro \
  test_python_module_0.pro \
  test_python_module_1.pro \
  test_python_module_2.pro \
  test_readf.pro \
  test_rebin.pro \
  test_rk4.pro \
  test_scope_varfetch.pro \
  test_sem.pro \
  test_spawn_unit.pro \
  test_spher_harm.pro \
  test_spl_init.pro \
  test_step.pro \
  test_str_functions.pro \
  test_str_sep.pro \
  test_stregex.pro \
  test_strmatch.pro \
  test_strsplit.pro \
  test_suite.pro \
  test_systime.pro \
  test_url.pro \
  test_wavelet.pro \
  test_zeropoly.pro \
  test_zip.pro \
  checks
