check_LTLIBRARIES = libtest_ce.la
libtest_ce_la_SOURCES = libtest_ce.cpp
libtest_ce_la_LDFLAGS = -rpath $(abs_srcdir)/testsuite/.libs

#TESTS_ENVIRONMENT = $(top_srcdir)/testsuite/try $(top_srcdir)
TESTS_ENVIRONMENT = $(top_srcdir)/testsuite/try $(top_srcdir) $(top_builddir)
TESTS = \
  test_angles.pro \
  test_array_equal.pro \
  test_base64.pro \
  test_binfmt.pro \
  test_bug_1779553.pro \
  test_bug_2555865.pro \
  test_bug_2610174.pro \
  test_bug_2846561.pro \
  test_bug_2876150.pro \
  test_bug_2876161.pro \
  test_bug_2876372.pro \
  test_bug_2892631.pro \
  test_bug_2949487.pro \
  test_bug_2974380.pro \
  test_bug_3033108.pro \
  test_bug_3054361.pro \
  test_bug_3055720.pro \
  test_bug_3057511.pro \
  test_bug_3057520.pro \
  test_bug_3061072.pro \
  test_bug_3081887.pro \
  test_bug_3085858.pro \
  test_bug_3086851.pro \
  test_bug_3091599.pro \
  test_bug_3091610.pro \
  test_bug_3100945.pro \
  test_bug_3104209.pro \
  test_bug_3104214.pro \
  test_bug_3104326.pro \
  test_bug_3104349.pro \
  test_bug_3147146.pro \
  test_bug_3147181.pro \
  test_bug_3147733.pro \
  test_bug_3151760.pro \
  test_bug_3152892.pro \
  test_bug_3152899.pro \
  test_bug_3189072.pro \
  test_bug_3199465.pro \
  test_bug_3275334.pro \
  test_bug_3285659.pro \
  test_bug_3286031.pro \
  test_bug_3288652.pro \
  test_bug_3290532.pro \
  test_bug_3296360.pro \
  test_bug_3298378.pro \
  test_bug_3300626.pro \
  test_bug_3313522.pro \
  test_bug_3376577.pro \
  test_bug_3394430.pro \
  test_bug_3426399.pro \
  test_bug_3453775.pro \
  test_bug_3483402.pro \
  test_bug_3488003.pro \
  test_bug_3559291.pro \
  test_bug_3572473.pro \
  test_bug_3595172.pro \
  test_bug_n000542.pro \
  test_bug_n000580.pro \
  test_bug_n000581.pro \
  test_bug_n000587.pro \
  test_bug_n000597.pro \
  test_bug_n000599.pro \
  test_bug_n000607.pro \
  test_bug_n000608.pro \
  test_bug_635.pro \
  test_bytscl.pro \
  test_byte_conversion.pro \
  test_call_function.pro \
  test_call_function_extra.pro \
  test_call_procedure.pro \
  test_call_procedure_extra.pro \
  test_ce.pro \
  test_clip.pro \
  test_common.pro \
  test_congrid.pro \
  test_constants.pro \
  test_convert_coord.pro \
  test_correlate.pro \
  test_deriv.pro \
  test_device.pro \
  test_dicom.pro \
  test_erfinv.pro \
  test_execute.pro \
  test_extra_keywords.pro \
  test_fft.pro \
  test_fft_dim.pro \
  test_fft_leak.pro \
  test_file_basename.pro \
  test_file_copy.pro \
  test_file_delete.pro \
  test_file_dirname.pro \
  test_file_move.pro \
  test_file_search.pro \
  test_file_test.pro \
  test_file_which.pro \
  test_finite.pro \
  test_fix.pro \
  test_fixprint.pro \
  test_format.pro \
  test_formats.pro \
  test_fx_root.pro \
  test_fz_roots.pro \
  test_gc.pro \
  test_get_lun.pro \
  test_get_screen_size.pro \
  test_grib.pro \
  test_hist_2d.pro \
  test_hdf5.pro \
  test_idl8.pro \
  test_idlneturl.pro \
  test_idl_validname.pro \
  test_image_statistics.pro \
  test_interpol.pro \
  test_interpolate_missing.pro \
  test_isa.pro \
  test_ishft.pro \
  test_list.pro \
  test_ludc_lusol.pro \
  test_la_least_squares.pro \
  test_math_function_dim.pro \
  test_matrix_multiply.pro \
  test_memory.pro \
  test_message.pro \
  test_modulo.pro \
  test_moment.pro \
  test_mpfit.pro \
  test_multiroots.pro \
  test_nans_in_sort_and_median.pro \
  test_nestedloop.pro \
  test_netcdf.pro \
  test_null.pro \
  test_obj_isa.pro \
  test_obj_new.pro \
  test_plot_oo.pro \
  test_plotting_ranges.pro \
  test_pmulti.pro \
  test_pmulti_basic.pro \
  test_postscript.pro \
  test_product.pro \
  test_ps_decomposed.pro \
  test_ptrarr.pro \
  test_python.pro \
  test_python_module_0.pro \
  test_python_module_1.pro \
  test_python_module_2.pro \
  test_qhull.pro \
  test_qromb.pro \
  test_qromo.pro \
  test_random.pro \
  test_readf.pro \
  test_reads.pro \
  test_rebin.pro \
  test_rk4.pro \
  test_routine_names.pro \
  test_same_name.pro \
  test_scope_varfetch.pro \
  test_sem.pro \
  test_spawn_unit.pro \
  test_spher_harm.pro \
  test_spl_init.pro \
  test_standardize.pro \
  test_step.pro \
  test_str_functions.pro \
  test_str_sep.pro \
  test_stregex.pro \
  test_strmatch.pro \
  test_strsplit.pro \
  test_structures.pro \
  test_suite.pro \
  test_systime.pro \
  test_tic_toc.pro \
  test_trisol.pro \
  test_tv.pro \
  test_typename.pro \
  test_url.pro \
  test_voigt.pro \
  test_wait.pro \
  test_wavelet.pro \
  test_window_background.pro \
  test_where.pro \
  test_zeropoly.pro \
  test_zip.pro \
  test_xdr.pro \
  checks
