SUBDIRS = dicom
prolibdir = $(GDLDATADIR)/lib
prolib_DATA = \
  appleman.pro \
  array_indices.pro \
  calendar.pro \
  deriv.pro \
  dist.pro \
  factorial.pro \
  file_basename.pro \
  file_dirname.pro \
  file_lines.pro \
  filepath.pro \
  findex.pro \
  findfile.pro \
  helpform.pro \
  hist_2d.pro \
  hist_nd.pro \
  identity.pro \
  imsl_zerosys.pro \
  interpol.pro \
  ishft.pro \
  kurtosis.pro \
  last_item.pro \
  lmgr.pro \
  loadct.pro \
  map_clip_set.pro \
  matrix_multiply.pro \
  mean.pro \
  meanabsdev.pro \
  moment.pro \
  norm.pro \
  path_sep.pro \
  ploterr.pro \
  poly.pro \
  poly_area.pro \
  popd.pro \
  primes.pro \
  printd.pro \
  pushd.pro \
  py_plot.pro \
  py_print.pro \
  query_bmp.pro \
  query_dicom.pro \
  query_gif.pro \
  query_image.pro \
  query_jpeg.pro \
  query_pict.pro \
  query_png.pro \
  query_ppm.pro \
  query_tiff.pro \
  read_ascii.pro \
  read_binary.pro \
  read_bmp.pro \
  read_dicom.pro \
  read_jpeg.pro \
  read_pict.pro \
  read_png.pro \
  read_tiff.pro \
  read_xwd.pro \
  real_part.pro \
  restore.pro \
  rstrpos.pro \
  save.pro \
  showfont.pro \
  skewness.pro \
  skip_lun.pro \
  smooth.pro \
  spl_init_old.pro \
  spl_interp_old.pro \
  stddev.pro \
  str_sep.pro \
  strsplit.pro \
  swap_endian.pro \
  template.pro \
  template_blank.pro \
  trace.pro \
  tvscl.pro \
  uniq.pro \
  value_locate.pro \
  variance.pro \
  write_bmp.pro \
  write_jpeg.pro \
  write_pict.pro \
  write_png.pro \
  README.txt \
  STATUS
EXTRA_DIST = $(prolib_DATA)
TESTS = checks
